cmake_minimum_required(VERSION 3.15)

project(SFML)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

# Настройки для статической сборки SFML
set(SFML_BUILD_AUDIO TRUE)
set(SFML_BUILD_GRAPHICS TRUE)
set(SFML_BUILD_WINDOW TRUE)
set(SFML_BUILD_SYSTEM TRUE)
set(SFML_BUILD_DOCS FALSE)
set(SFML_BUILD_EXAMPLES FALSE)
set(SFML_BUILD_TESTS FALSE)
set(SFML_BUILD_SHARED_LIBS FALSE)

# Добавляем SFML как подпроект
add_subdirectory(SFML) 